app jsx.gameboard

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,48 @@
 :root {
+  --header-font-size: 1rem;
   font: 16px / 1 sans-serif;
 }
-
 html {
   height: 100%;
 }
 
 body {
-  margin: 0;
+  margin: 3rem;
   min-height: 100%;
+}
+
+h2 {
+  color: rgb(133, 29, 133);
+  text-align: center;
+  font-size: 64px;
+}
+main {
+  display: grid;
+  justify-content: center;
+}
+
+ul {
+  height: calc(100vh - 10 * var(--header-font-size));
+  width: calc(100vh - 10 * var(--header-font-size));
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: rgb(132, 88, 160);
+}
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0.5;
+  border: 2px black solid;
+  max-width: 100%;
+}
+li {
+  margin: 0;
+  padding: 0.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+  font-size: x-large;
 }
